--- a/presentation/src/main/res/values-v27/themes.xml
+++ b/presentation/src/main/res/values-v27/themes.xml
@@ -2,7 +2,7 @@
   ~ carrot-android © 2022 Ji Sungbin. all rights reserved.
   ~ carrot-android license is under the MIT.
   ~
-  ~ [themes.xml] created by Ji Sungbin on 22. 1. 23. 오전 12:01
+  ~ [themes.xml] created by Ji Sungbin on 22. 1. 23. 오전 12:00
   ~
   ~ Please see: https://github.com/carrot-style/carrot-android/blob/main/LICENSE.
   -->
@@ -13,5 +13,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <item name="android:navigationBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightNavigationBar">true</item>
     </style>
 </resources>
